--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.56"
 nom = "7.1.1"
+
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
